--- a/bigbluebutton-html5/private/config/settings.yml
+++ b/bigbluebutton-html5/private/config/settings.yml
@@ -43,6 +43,7 @@ public:
         animations: true
         chatAudioAlerts: false
         chatPushAlerts: false
+        darkMode: false
         userJoinAudioAlerts: false
         userJoinPushAlerts: false
         fallbackLocale: en
